--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,6 @@ body {
 	margin-right: 50px;
 }
 section {
-	display: grid;
 	align-items: center;
 	min-height: 70vh;
 }
@@ -33,7 +32,6 @@ section {
 
 .homeQuote {
 	background-image: url(/img/milad-fakurian-7wUorDiCMSU-unsplash.jpg);
-	background-size: cover;
 	height: 70vh;
 	width: 100%;
 }
@@ -76,32 +74,12 @@ section {
 .quotes {
 	padding-top: 30vh;
 }
-.shopNbutton {
-	background-color: rgba(255, 255, 255, 0.259);
-	-webkit-backdrop-filter: saturate(180%) blur(20px);
-	backdrop-filter: saturate(180%) blur(20px);
-	position: absolute;
-	text-decoration: none;
-	border-radius: 30px;
-	text-align: center;
-	top: 90%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-	font-size: 24px;
-	transition: .3s ease;
-	box-shadow: 3px 0px 5px rgba(0, 0, 0, 15);
- }
- .shopNow {
+
+.shopNow {
 	color: rgb(22, 22, 22);
 	font-size: 22px;
 	margin: 16px 60px;
- }
-.shopNbutton:hover {
-	box-shadow: 0px 0px 16px rgb(0, 0, 0);
-	background-color: rgba(119, 88, 22, 0.796);
-	
-}  
+ } 
 
 .promovideo {
 	width: 100%;
@@ -123,3 +101,45 @@ section {
 	margin: 30px;
 	padding: 10px 15px;
 }
+
+/* test */
+
+ .Qac h1, h2 {
+    margin: 0;
+    padding: 10px 0;
+	
+	
+  }
+  
+  .shop-button {
+    margin: 20px 0;
+    padding: 10px 20px;
+    font-size: 16px;
+	cursor: pointer;
+	width: 10%;
+	background-color: rgba(165, 163, 163, 0.74);
+	font-size: 1.5rem;
+	-webkit-backdrop-filter: saturate(180%) blur(20px);
+	backdrop-filter: saturate(180%) blur(20px);
+	border-radius: 30px;
+	transition: .3s ease;    
+	box-shadow: 0px 0px 16px rgb(0 0 0 / 66%);
+	border: none;
+  }
+  .Qac {
+	padding-top: 30vh;
+
+  }
+  .centered-section {
+	background-image: url(/img/milad-fakurian-7wUorDiCMSU-unsplash.jpg);
+	background-size: cover;
+	text-align: center;
+  }
+
+ 
+.shop-button:hover {
+	
+	box-shadow: 0px 0px 6px 0px rgb(0 0 0 / 62%);
+	background-color: rgba(165, 163, 163, 0.74);
+	
+} 
