--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,7 +71,7 @@ section {
     padding: 10px 20px;
     font-size: 1.5em;
 	cursor: pointer;
-	width: 10%;
+	width: 200px;
 	background-color: rgba(165, 163, 163, 0.74);
 	font-size: 1.5rem;
 	-webkit-backdrop-filter: saturate(180%) blur(20px);
@@ -116,7 +116,7 @@ section {
     padding: 10px 20px;
     font-size: 1.5em;
     cursor: pointer;
-    width: 10%;
+    width: 200px;
     background-color: rgba(89, 72, 21, 0.639);
     font-size: 1.5em;
     -webkit-backdrop-filter: saturate(180%) blur(20px);
@@ -168,13 +168,6 @@ section {
 	transform: scale(1.1);
 	z-index: 1;
  }
- .bestsellersNom {
-	
- }
-.bestsellersDsc {
-
-}
-
 
 .bestsellerLinks {
 	font-size: 1.5rem;
@@ -182,3 +175,13 @@ section {
 	text-decoration: none;
 	color: black;
 }
+
+/* resmonsive */
+@media only screen and (max-width: 767px) {
+	.cartHome {
+		width: 80%;
+		height: 40%;
+	}
+	section { min-height: auto;}
+  }
+  
